@@ -1,4 +1,3 @@
-:xq
 Python News
 +++++++++++
 
@@ -12,6 +11,10 @@ Core and Builtins
 
 Library
 -------
+
+- Issue #10478: Reentrant calls inside buffered IO objects (for example by
+  way of a signal handler) now raise a RuntimeError instead of freezing the
+  current process.
 
 - Issue #10497: Fix incorrect use of gettext in argparse.
 
